# nexell_swallow_library_nx-v4l2

./: Makefile  Makefile.am  Makefile.cross  build.sh  configure.ac  mm_types.h  nx-v4l2.c  nx-v4l2.h
debian/: changelog  control  nx-v4l2-dev.install  nx-v4l2.install
packaging/: nx-v4l2.spec
